@@ -411,7 +411,7 @@ void CSubtitleDlDlg::OnOK()
         pMF->m_pSubStreams.RemoveAll();
     }
 
-    CAppSettings& s = AfxGetAppSettings();
+    const CAppSettings& s = AfxGetAppSettings();
     SubtitleInput subInputToSet;
 
     POSITION pos = m_selsubs.GetHeadPosition();
@@ -425,7 +425,7 @@ void CSubtitleDlDlg::OnOK()
         url.Append(args);
 
         if (OpenUrl(is, CString(url), str)) {
-            CAutoPtr<CRenderedTextSubtitle> pRTS(DEBUG_NEW CRenderedTextSubtitle(&pMF->m_csSubLock, &s.subtitlesDefStyle, s.fUseDefaultSubtitlesStyle));
+            CAutoPtr<CRenderedTextSubtitle> pRTS(DEBUG_NEW CRenderedTextSubtitle(&pMF->m_csSubLock));
             if (pRTS && pRTS->Open((BYTE*)(LPCSTR)str, str.GetLength(), DEFAULT_CHARSET, CString(sub.name)) && pRTS->GetStreamCount() > 0) {
                 SubtitleInput subElement(pRTS.Detach());
                 pMF->m_pSubStreams.AddTail(subElement);
